# videoclaw

./: .gitignore  CLAUDE.md  README.md  README_en.md  problem.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: configuration.md
docs/models/: google-gemini.md
docs/plans/: 2026-02-18-videoclaw-design.md  2026-02-18-videoclaw-phase1.md  2026-02-18-videoclaw-phase2.md  2026-02-18-videoclaw-phase3.md  2026-02-18-videoclaw-phase4.md  2026-02-19-videoclaw-phase5.md  2026-02-20-gemini-image-backend.md  2026-02-20-google-drive-integration-design.md  2026-02-20-google-drive-integration-implementation.md  2026-02-20-logging-system-design.md  2026-02-20-logging-system-implementation.md  2026-02-20-skill-driven-architecture-refactor.md  2026-02-20-skill-driven-architecture.md  2026-02-20-user-interaction-design.md  2026-02-20-user-interaction-implementation.md  2026-02-21-cli-enhancements-design.md  2026-02-21-cli-enhancements-plan.md  2026-02-21-i2v-redesign-impl.md  (+15 more)
skills/: README.md  video:analyze.md  video:assets.md  video:audio.md  video:config.md  video:create.md  video:i2v.md  video:init.md  video:merge.md  video:preview.md  video:status.md  video:storyboard.md
tests/: __init__.py  test_assets_num_variants.py  test_config.py  test_dashscope.py  test_ffmpeg.py  test_gemini_image.py  test_i2i_command.py  test_init_interactive.py  test_logging.py  test_models_mock.py  test_pipeline.py  test_state.py  test_state_selections.py  test_storage_local.py  test_storyboard_num_variants.py  test_t2i_command.py  test_utils.py  test_volcengine_image.py  test_volcengine_tts.py  test_volcengine_video.py
videoclaw/: __init__.py
(+92 files in other folders)
